# lpf

./: .clang-format  .gitignore  ACONFIG_CHECKLIST.md  AGENTS.md  BUGFIX_REPORT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMMIT_MESSAGE.txt  CONTINUE_HERE.md  CURRENT_STATUS.md  Config.in  DEVICETREE_EXAMPLE.md  FINAL_REPORT.md  IMPROVEMENTS.md  Kconfig  Makefile  PDM_架构优化分析.md  PHASE5_COMPLETE.md  README.md  REFACTOR_SUMMARY.md  RENAME_PLAN.md  SESSION_SUMMARY.md  TEST_SUMMARY.md  WATCHDOG_REFACTORING.md  build.py  build.sh  defconfig  project.py  run-tests.sh
apps/memory_monitor/: CMakeLists.txt  Makefile  main.c
apps/memory_monitor/src/: display.c  display.h  mem_types.h  sys_mem.c  sys_mem.h  user_mem.c  user_mem.h
apps/pdebug/: CMakeLists.txt  pdebug.c
apps/smart_monitor/: CMakeLists.txt  Makefile
apps/smart_monitor/src/: main.c
kernel/pdm/: CMakeLists.txt  Config.in  Makefile  README.md  config.cmake  pdm.c
kernel/pdm-core/: CMakeLists.txt  Config.in  Makefile
kernel/pdm-core/bus/: Makefile
kernel/pdm-core/compat/: Makefile  pdm_compat_can.c  pdm_compat_gpio.c  pdm_compat_i2c.c  pdm_compat_pwm.c  pdm_compat_serial.c  pdm_compat_spi.c
kernel/pdm-core/core/: Makefile  pdm_chrdev.c  pdm_core.c  pdm_ctl.c  pdm_ctl_internal.h
kernel/pdm-core/hw/: Config.in  Makefile
kernel/pdm-core/hw/can/: pdm_hw_can.c
kernel/pdm-core/hw/core/: pdm_hw.c  pdm_hw_builtin_end.c  pdm_hw_builtin_start.c
kernel/pdm-core/hw/gpio/: pdm_hw_gpio.c
kernel/pdm-core/hw/i2c/: pdm_hw_i2c.c
kernel/pdm-core/hw/pwm/: pdm_hw_pwm.c
kernel/pdm-core/hw/selftest/: Makefile  pdm_hw_mock_selftest.c
kernel/pdm-core/hw/spi/: pdm_hw_spi.c
kernel/pdm-core/hw/uart/: pdm_hw_uart.c
kernel/pdm-core/include/: pdm_hw_internal.h  pdm_runtime_internal.h
kernel/pdm-core/peripheral/led/: Config.in  Makefile  pdm_led_chrdev.c  pdm_led_config_driver.c  pdm_led_gpio.c  pdm_led_internal.h  pdm_led_proc.c  pdm_led_pwm.c  pdm_led_service.c
kernel/pdm-core/peripheral/mcu/: Config.in  Makefile  pdm_mcu_can.c  pdm_mcu_chrdev.c  pdm_mcu_config_driver.c  pdm_mcu_internal.h  pdm_mcu_proc.c  pdm_mcu_service.c  pdm_mcu_transport.c  pdm_mcu_transport.h  pdm_mcu_uart.c
kernel/pdm-core/peripheral/selftest/: Makefile  pdm_dummy_service_selftest.c
kernel/pdm-core/protocol/: Makefile  pdm_protocol.c  pdm_protocol_common.c  pdm_protocol_internal.h
kernel/pdm-core/runtime/: Makefile  pdm_runtime.c  pdm_runtime_config.c  pdm_runtime_entry_end.c  pdm_runtime_entry_start.c
kernel/pdm-core/soc/: Makefile  pdm_soc_adapter.c
kernel/pdm-core/soc/generic_linux/: pdm_soc_generic_linux.c
kernel/pdm-core/soc/mock/: pdm_soc_mock.c
kernel/pdm/bus/: pdm_bus.c  pdm_bus_controller.c  pdm_bus_controller.h  pdm_cdev.c  pdm_device.c  pdm_driver_registry.c  pdm_driver_registry_start.c  pdm_driver_registry_stop.c  pdm_of_bus.c
kernel/pdm/core/: pdm_backend.c  pdm_bus.c  pdm_client.c  pdm_core.c  pdm_ctl.c  pdm_debugfs.c  pdm_device.c  pdm_of_bus.c  pdm_proc.c  pdm_sysfs.c
kernel/pdm/core/bus/: pdm_bus.c  pdm_cdev.c  pdm_device.c  pdm_of_bus.c
kernel/pdm/core/cdev/: pdm_cdev.c  pdm_ctl.c  pdm_ctl.h  pdm_manager.c  pdm_manager.h
kernel/pdm/diag/: pdm_sysfs.c
kernel/pdm/include/: pdm_bus.h  pdm_chrdev.h  pdm_debugfs.h  pdm_driver.h  pdm_internal.h  pdm_proc.h
kernel/pdm/mock/: pdm_mock_devices.c
kernel/pdm/peripheral/: pdm_peripheral.h
kernel/pdm/registry/: pdm_backend_registry.c  pdm_driver_registry.c
kernel/pdm/src/: pdm.c
kernel/pdm/testing/: pdm_mock_devices.h
products/ccm/: .config.mk  CMakeLists.txt  Config.in  Kconfig  Makefile  README.md  config_defaults.mk
products/ccm/h200_am625/: CMakeLists.txt  Makefile  module.mk
products/ccm/libs/: Makefile
tests/: CMakeLists.txt  Kconfig  Makefile
tests/core/: CMakeLists.txt  main.c  module.mk  test_menu.c  test_registry.c  test_runner.c
tests/include/: test_assert.h  test_framework.h  test_performance.h  test_registry.h  test_stress.h  test_system.h  tests_core.h
tests/osal/: test_osal_resource_tracker.c
tests/performance/: CMakeLists.txt  module.mk  test_perf_core.c
tests/performance/acl/: test_perf_acl.c
tests/performance/hal/: test_perf_hal.c
tests/performance/pcl/: test_perf_pcl.c
tests/stress/: CMakeLists.txt  module.mk  test_stress_core.c
tests/stress/acl/: test_stress_acl.c
tests/stress/hal/: test_stress_hal.c
tests/stress/pcl/: test_stress_pcl.c
tests/system/: CMakeLists.txt  module.mk
tests/system/acl/: test_system_acl.c
tests/system/hal/: test_system_hal.c
tests/system/integration/: test_system_integration.c
tests/system/pcl/: test_system_pcl.c
tests/unit/: CMakeLists.txt  module.mk
tests/unit/aconfig/: test_aconfig_api.c
tests/unit/hal/: test_hal_can.c  test_hal_gpio.c  test_hal_i2c.c  test_hal_serial.c  test_hal_spi.c  test_hal_watchdog.c
tests/unit/osal/: test_osal_atomic.c  test_osal_clock.c  test_osal_cond.c  test_osal_file.c  test_osal_heap.c  test_osal_log.c  test_osal_mutex.c  test_osal_process.c  test_osal_sched.c  test_osal_semaphore.c  test_osal_shm.c  test_osal_signal.c  test_osal_stress.c  test_osal_string.c  test_osal_thread.c  test_osal_time.c  test_osal_version.c
tests/unit/pcl/: test_pcl_api.c
tests/unit/pconfig/: test_pconfig_api.c
tests/unit/pdl/: test_pdl_bmc.c  test_pdl_bmc_protocol.c  test_pdl_mcu.c  test_pdl_satellite.c  test_pdl_watchdog.c
tests/user/: CMakeLists.txt
tests/user/abi/: CMakeLists.txt  test_uapi_layout.c
tests/user/architecture/: CMakeLists.txt  test_lpf_architecture_boundaries.c  test_pdm_architecture_boundaries.c
tests/user/config/: CMakeLists.txt  test_lpf_config_compare.c  test_lpf_config_compare.h  test_lpf_config_dt_parser.c  test_lpf_config_normalizer.c  test_pdm_config_compare.c  test_pdm_config_compare.h  test_pdm_config_dt_parser.c  test_pdm_config_normalizer.c
tests/user/mcu/: CMakeLists.txt  test_lpf_mcu_transport_registry.c  test_pdm_mcu_transport_registry.c
tests/user/pdi/: CMakeLists.txt  test_pdi_basic.c  test_pdi_ioctl_mock.c
tests/user/smoke/: CMakeLists.txt  test_pdm_mock_runtime_smoke.c
(+1468 files in other folders)
