# =============================================================================
# libh200_am625 CMake 配置
# =============================================================================

# -----------------------------------------------------------------------------
# 1. 源文件列表
# -----------------------------------------------------------------------------
set(H200_SRCS
    acl/ccm_acl_config.c
    acl/H200_100P/acl_h200_100p.c
    acl/H200_100P/acl_h200_100p_invalidation.c
    pcl/pcl_h200_100p_base.c
    pcl/pcl_h200_100p_v1.c
    pcl/pcl_h200_100p_v2.c
)

# -----------------------------------------------------------------------------
# 2. 创建共享库
# -----------------------------------------------------------------------------
add_library(h200_am625 SHARED ${H200_SRCS})

# -----------------------------------------------------------------------------
# 3. 头文件路径
# -----------------------------------------------------------------------------
target_include_directories(h200_am625
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/acl
        ${CMAKE_CURRENT_SOURCE_DIR}/pcl
)

# -----------------------------------------------------------------------------
# 4. 链接依赖
# -----------------------------------------------------------------------------
target_link_libraries(h200_am625
    PUBLIC
        acl
        pcl
        hal
        osal
)

# 如果 PDL 存在，则链接
if(TARGET pdl)
    target_link_libraries(h200_am625 PUBLIC pdl)
endif()

# -----------------------------------------------------------------------------
# 5. 安装
# -----------------------------------------------------------------------------
install(TARGETS h200_am625
    LIBRARY DESTINATION lib
)

install(DIRECTORY include/
    DESTINATION include
    FILES_MATCHING PATTERN "*.h"
)
