# =============================================================================
# ccm_collector 应用程序 CMake 配置
# =============================================================================

# -----------------------------------------------------------------------------
# 1. 源文件
# -----------------------------------------------------------------------------
set(COLLECTOR_SRCS
    src/ccm_collector.c
    src/main.c
)

# -----------------------------------------------------------------------------
# 2. 创建可执行文件
# -----------------------------------------------------------------------------
add_executable(ccm_collector ${COLLECTOR_SRCS})

# -----------------------------------------------------------------------------
# 3. 头文件路径
# -----------------------------------------------------------------------------
target_include_directories(ccm_collector
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# -----------------------------------------------------------------------------
# 4. 链接库（只需声明直接依赖，CMake 自动处理传递依赖）
# -----------------------------------------------------------------------------
target_link_libraries(ccm_collector
    PRIVATE
        h200_am625
        ccm
)

# -----------------------------------------------------------------------------
# 5. 安装
# -----------------------------------------------------------------------------
install(TARGETS ccm_collector
    RUNTIME DESTINATION bin
)
