# =============================================================================
# libccm CMake 配置
# =============================================================================

# -----------------------------------------------------------------------------
# 1. 源文件列表
# -----------------------------------------------------------------------------
set(LIBCCM_SRCS
    src/libccm_ipc.c
    src/libccm_protocol.c
)

# -----------------------------------------------------------------------------
# 2. 创建共享库
# -----------------------------------------------------------------------------
add_library(ccm SHARED ${LIBCCM_SRCS})

# -----------------------------------------------------------------------------
# 3. 头文件路径
# -----------------------------------------------------------------------------
target_include_directories(ccm
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

# -----------------------------------------------------------------------------
# 4. 链接依赖
# -----------------------------------------------------------------------------
target_link_libraries(ccm
    PUBLIC
        osal
)

# -----------------------------------------------------------------------------
# 5. 安装
# -----------------------------------------------------------------------------
install(TARGETS ccm
    LIBRARY DESTINATION lib
)

install(DIRECTORY include/
    DESTINATION include
    FILES_MATCHING PATTERN "*.h"
)
